Update name
