# src/StorageManager.Service.Host/Controllers/ModuleController.cs
@@ -7,7 +7,17 @@ namespace StorageManager.Service.Host.Controllers
     [ApiController]
     public class ModuleController : ModuleControllerBase
     {
+        public override Task<ActionResult<DeviceResponse>> CreateDeviceInModule(string siteId, string areaId, string moduleId, [FromBody] CreateDeviceRequest body)
+        {
+            throw new NotImplementedException();
+        }
+
         public override Task<ActionResult<ModuleResponse>> CreateModule(string siteId, string areaId, [FromBody] CreateModuleRequest body)
+        {
+            throw new NotImplementedException();
+        }
+
+        public override Task<IActionResult> DeleteDeviceInModule(string siteId, string areaId, string moduleId, string deviceId)
         {
             throw new NotImplementedException();
         }
@@ -17,7 +27,17 @@ namespace StorageManager.Service.Host.Controllers
             throw new NotImplementedException();
         }
 
+        public override Task<ActionResult<ICollection<DeviceResponse>>> GetAllDevicesInModule(string siteId, string areaId, string moduleId)
+        {
+            throw new NotImplementedException();
+        }
+
         public override Task<ActionResult<ICollection<ModuleResponse>>> GetAllModules(string siteId, string areaId)
+        {
+            throw new NotImplementedException();
+        }
+
+        public override Task<ActionResult<DeviceResponse>> GetDeviceByIdInModule(string siteId, string areaId, string moduleId, string deviceId)
         {
             throw new NotImplementedException();
         }
@@ -27,27 +47,7 @@ namespace StorageManager.Service.Host.Controllers
             throw new NotImplementedException();
         }
 
-        public override Task<ActionResult<DeviceResponse>> Module_CreateDevice(string siteId, string areaId, string moduleId, [FromBody] CreateDeviceRequest body)
-        {
-            throw new NotImplementedException();
-        }
-
-        public override Task<IActionResult> Module_DeleteDevice(string siteId, string areaId, string moduleId, string deviceId)
-        {
-            throw new NotImplementedException();
-        }
-
-        public override Task<ActionResult<ICollection<DeviceResponse>>> Module_GetAllDevices(string siteId, string areaId, string moduleId)
-        {
-            throw new NotImplementedException();
-        }
-
-        public override Task<ActionResult<DeviceResponse>> Module_GetDevice(string siteId, string areaId, string moduleId, string deviceId)
-        {
-            throw new NotImplementedException();
-        }
-
-        public override Task<ActionResult<DeviceResponse>> Module_UpdateDevice(string siteId, string areaId, string moduleId, string deviceId, [FromBody] UpdateDeviceRequest body)
+        public override Task<ActionResult<DeviceResponse>> UpdateDeviceInModule(string siteId, string areaId, string moduleId, string deviceId, [FromBody] UpdateDeviceRequest body)
         {
             throw new NotImplementedException();
         }
